# StoreMy

./: .dockerignore  .editorconfig  .gitignore  .golangci.yml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.dev  Makefile  README.md  SECURITY.md  bacon.toml  cliff.toml  clippy.toml  deny.toml  docker-compose.yml  go.mod  go.sum  main.go  makefile.py  pyproject.toml  rust-toolchain.toml  rustfmt.toml  scripts.json  typos.toml
.cargo/: config.toml
.claude/: settings.local.json
.claude/rules/: benchmarking.md
.config/: nextest.toml
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: changelog.yml  ci-deep.yml  ci.yml  lint-actions.yml  security.yml
app/: __init__.py  database.py  main.py
app/catalog/: __init__.py  catalog.py  persistence.py  schema_loader.py  schema_validator.py  table_info.py  table_manager.py
app/core/: __init__.py  exceptions.py
app/primitives/: __init__.py  index_page_id.py  page_id.py  record_id.py  transaction_id.py
app/recovery/: exceptions.py  log_constants.py  log_file.py
app/storage/: __init__.py  buffer_pool.py  exceptions.py  permissions.py  utilities.py
benchmarks/: benchmark.go
db/: .gitignore  Cargo.toml
db/src/: codec.rs  database.rs  lib.rs  main.rs  observability.rs  primitives.rs  registry.rs  storage.rs  test_utils.rs  transaction.rs  tuple.rs  types.rs
db/src/binder/: binders.rs  ddl.rs  dml.rs  expr.rs  helpers.rs  mod.rs  query.rs  scope.rs
db/src/buffer_pool/: double_write.rs  lock.rs  mod.rs  page_store.rs
db/src/catalog/: column.rs  constraints.rs  index.rs  manager.rs  mod.rs  systable.rs  table.rs  tuple.rs
db/src/engine/: alter_table.rs  create_index.rs  create_table.rs  ddl.rs  delete.rs  dml.rs  drop_index.rs  drop_table.rs  error.rs  fk.rs  helpers.rs  insert.rs  mod.rs  query.rs  result.rs  scope.rs  show_indexes.rs  tcl.rs  update.rs
db/src/error/: mod.rs
db/src/execution/: aggregate.rs  eval.rs  expression.rs  join.rs  mod.rs  resolve.rs  scan.rs  setops.rs  unary.rs
db/src/execution/eval/: json.rs  mod.rs
db/src/execution/join/: cross.rs  hash.rs  mod.rs  nested_loop.rs  sort_merge.rs  test_utils.rs
db/src/heap/: file.rs  mod.rs  overflow.rs  page.rs
db/src/index/: access.rs  hash.rs  key.rs  mod.rs
db/src/index/btree/: mod.rs  node.rs
db/src/index/hash/: bucket.rs  mod.rs
db/src/parser/: lexer.rs  mod.rs  parsers.rs  statements.rs  token.rs
db/src/parser/parsers/: ddl.rs  dml.rs  expr.rs  mod.rs  query.rs  txn.rs
db/src/recovery/: analysis.rs  mod.rs  redo.rs  undo.rs
db/src/repl/: helper.rs  meta.rs  mod.rs  render.rs  state.rs  theme.rs
db/src/storage/: envelope.rs  heap.rs  index.rs  mod.rs  typed_page.rs
db/src/tuple/: mod.rs  schema.rs  tuple.rs
db/src/types/: mod.rs  value.rs
db/src/wal/: log.rs  mod.rs  reader.rs  writer.rs
db/src/web/: error.rs  mod.rs
db/src/web/dto/: heap.rs  mod.rs  query.rs
db/src/web/handlers/: catalog.rs  databases.rs  heap.rs  mod.rs  query.rs
db/tests/: crash_recovery.proptest-regressions  crash_recovery.rs  integration.rs
db/tests/integration/: aggregates.rs  alter_table.rs  auto_increment.rs  catalog_introspection.rs  common.rs  concurrency.rs  constraints.rs  ddl.rs  dml.rs  errors.rs  insert_defaults.rs  join.rs  json.rs  select_expressions.rs  transactions.rs
docs/: __init__.py  api.rst  app.catalog.rst  app.concurrency.rst  app.core.rst  app.primitives.rst  app.query.rst  app.recovery.rst  app.rst  app.services.rst  app.storage.rst  build.py  conf.py  index.rst  modules.rst
examples/: README.md  quick_test.sql  tuple_example.py
examples/test_db/: test_db.go
monitoring/: prometheus.yml
monitoring/exporter/: metrics_exporter.go
monitoring/loki/: loki.yml
monitoring/promtail/: promtail.yml
pkg/catalog/: catalog.go  catalog_manager.go  catalog_manager_test.go  catalog_test.go  column_statistics.go  columns.go  index.go  index_statistics.go  manager_test.go  schema.go  statistics.go  statistics_integration_test.go  statistics_manager.go  statistics_manager_test.go  systables.go  table_cache.go  utils.go
pkg/database/: db.go  db_concurrency_test.go  db_init_test.go  db_integration_test.go  db_query_test.go  db_transaction_test.go  formatter.go  formatter_test.go  statistics_test.go
pkg/debug/: logreader.go
pkg/error/: error.go
pkg/examples/: README.md  main.go  transaction_logs.go
pkg/execution/: doc.go  filter.go  filter_test.go  iterator.go  iterator_test.go  predicate.go  project.go  project_test.go  seqscan.go  seqscan_test.go
pkg/indexmanager/: README.md  fileops.go  index_cache.go  index_lifecycle.go  index_loader.go  index_maintenance.go  index_manager.go  index_manager_test.go
pkg/integration/: INDEX_PERFORMANCE_TESTS.md  helpers.go  index_performance_test.go  sql_file_test.go  sql_workflows_test.go
pkg/iterator/: README.md  base.go  base_test.go  binary.go  common.go  db.go  dbfile.go  interfaces.go  iterators.go  slice_iterator.go  unary.go
pkg/log/: io.go  log.go  log_test.go  logfile.go  reader.go  reader_test.go  serialize.go  serialize_test.go  wal.go  wal_complex_test.go  wal_test.go
pkg/logging/: context.go  doc.go  logger.go
pkg/memory/: cache.go  (+15 more)
scripts/: install-gow.sh  watch-tests.sh
storemy-codec-derive/: Cargo.toml
tests/: test_catalog.py  test_main.py
tools/viz/: .gitignore  FORMAT.md  README.md  pyproject.toml
tools/viz/src/storemy_viz/: __init__.py  cli.py
tools/viz/src/storemy_viz/hash/: __init__.py  loader.py  model.py
tools/viz/src/storemy_viz/heap/: __init__.py  loader.py  model.py
tools/viz/src/storemy_viz/views/: __init__.py  graph.py  hash.py  heap.py  summary.py  tui.py
tools/viz/src/storemy_viz/wal/: __init__.py  chains.py  format.py  parser.py  records.py
tools/viz/tests/: conftest.py  test_wal_parser.py
web/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
(+632 files in other folders)
