[tool.poetry]
name = "app"
version = "0.1.0"
description = "A Python project"
authors = ["Utkarsh Priyadarshi"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.9"
cachetools = "^6.0.0"
rich = "^14.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
black = "^25.1.0"
flake8 = "^7.2.0"
mypy = "^1.16.0"
sphinx = "^7.1.0"
sphinx-rtd-theme = "^2.0.0"
sphinx-autodoc-typehints = "^1.25.0"

[tool.poetry.scripts]
app = "app.main:main"
docs = "docs.build:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true

