[project]
name = "storemy-viz"
version = "0.1.0"
description = "Dev-only visualizers for StoreMy on-disk formats (WAL, heap pages, indexes)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Utkarsh Priyadarshi" }]

dependencies = [
    "typer>=0.12",
    "rich>=13.7",
]

[project.optional-dependencies]
graph = ["graphviz>=0.20"]
tui   = ["textual>=0.60"]
dev   = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.5"]

[project.scripts]
storemy-viz = "storemy_viz.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/storemy_viz"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
